--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,8 +5,8 @@
 }
 
 @font-face {
-    font-family: Montserrat;
-    src: url('https://fonts.google.com/share?selection.family=Montserrat:ital,wght@0,100..900;1,100..900');
+    font-family: Alegreya;
+    src: url('https://fonts.google.com/share?selection.family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900');
 }
 
 a {
@@ -16,7 +16,7 @@ a {
 
 body {
     margin: 0;
-    font-family: "Montserrat", sans-serif;
+    font-family: "Alegreya", sans-serif;
     position: relative;
 }
 
