--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,7 @@ button {
 }
 
 body {
+    overflow-x: hidden;
     margin: 0;
     font-family: 'Alegreya', serif;
     position: relative;
@@ -26,7 +27,7 @@ body {
 header {
     position: sticky;
     top: 0;
-    transition: background-color 0.7s, color 0.4s;
+    transition: background-color 0.4s, color 0.4s;
     background-color: transparent;
     color: rgb(231, 231, 231);
     z-index: 1000;
@@ -126,6 +127,52 @@ header img {
     gap: 10px;
 }
 
+.dropdown {
+    position: relative;
+}
+
+.dropdown-content {
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 110vw;
+    background-color: white;
+    color: black;
+    padding: 20px 0;
+    z-index: 0;
+    margin-left: -150px;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.dropdown:hover .dropdown-content,
+.dropdown-content:hover {
+    opacity: 1;
+    visibility: visible;
+}
+
+.dropdown-content ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    /* max-width: 1200px; */
+    margin: 0 auto;
+    margin-left: 140px;
+}
+
+.dropdown-content ul li {
+    list-style: none;
+}
+
+.dropdown-content ul li a {
+    color: black;
+    text-decoration: none;
+    padding: 5px 10px;
+    transition: color 0.3s ease;
+}
+
 .bgvideo {
     position: absolute;
     right: 0;
@@ -155,7 +202,12 @@ header img {
     display: flex;
     gap: 20px;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.content {
+    width: 100%;
 }
 
 /* Блок категории с круглыми изображениями */
@@ -331,7 +383,7 @@ header img {
 
 /* Стили для изображения внутри карточки */
 .card img {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     width: 100%;
     transition: transform 0.3s ease;
     /* Плавное увеличение изображения */
@@ -612,8 +664,8 @@ p {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    max-width: 1200px;
-    margin: 0 auto;
+    max-width: 1300px;
+    margin: 50px auto;
     gap: 20px;
     border-bottom: 1px solid rgb(231, 231, 231);
     padding: 20px 0px;
@@ -674,7 +726,7 @@ p {
 .footer-bottom {
     display: flex;
     flex-wrap: wrap;
-    max-width: 1200px;
+    max-width: 1300px;
     line-height: 50px;
     margin: 0 auto;
     gap: 20px;
@@ -689,7 +741,7 @@ p {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    max-width: 1200px;
+    max-width: 1300px;
     line-height: 50px;
     margin: 0 auto;
     gap: 20px;
@@ -729,4 +781,55 @@ p {
     border-bottom: 1px solid gray;
     height: 5vh;
     font-weight: 300;
+}
+
+@media (max-width: 768px) {
+    .footer-container {
+        padding-left: 10px;
+        gap: 20px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .footer-bottom {
+        padding-left: 10px;
+    }
+
+    .footer-bottom2 {
+        padding: 10px;
+    }
+
+    .footer-column p {
+        padding-top: 10px;
+        width: 60%;
+    }
+}
+
+.shops img {
+    max-width: 40%;
+}
+
+.shopsh1 {
+    padding: 20px 0;
+    font-size: 32px;
+    font-weight: normal;
+}
+
+.shops {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.shops_cart {
+    display: flex;
+    gap: 20px;
+}
+
+.shops_container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 68%;
+    margin: 0 auto;
 }
