--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,9 @@
     font-size: 16px;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Alegreya:wght@100;400;700&display=swap');
+@import url('https://fonts.google.com/share?selection.family=Manrope:wght@200..800');
+@import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap');
+
 
 a {
     text-decoration: none;
@@ -12,13 +14,13 @@ a {
 }
 
 button {
-    font-family: 'Alegreya', serif;
+    font-family: "Manrope", serif;
 }
 
 body {
     overflow-x: hidden;
     margin: 0;
-    font-family: 'Alegreya', serif;
+    font-family: "Manrope", serif;
     position: relative;
     height: 100vh;
 }
@@ -221,6 +223,7 @@ header img {
     height: 22px;
     cursor: pointer;
     margin-left: -100%;
+    margin-top: 15px;
 }
 
 .menu-toggle span {
@@ -545,7 +548,9 @@ header img {
     }
 }
 
-
+.card p{
+    font-weight: 400;
+}
 
 .product-page {
     display: flex;
@@ -601,8 +606,13 @@ header img {
 }
 
 .product-description {
+    
     margin-top: 20px;
     margin-bottom: 20px;
+}
+
+.product-description p{
+    font-weight: 400;
 }
 
 .add-to-cart {
@@ -799,6 +809,7 @@ p {
 }
 
 .site-footer {
+    font-family: "Manrope", serif;
     background-color: #fff;
     color: #000;
     padding: 20px 0px;
@@ -821,10 +832,12 @@ p {
 }
 
 .footer-column p {
+    font-family: "Manrope", serif;
     font-size: 12px;
 }
 
 .footer-column h4 {
+    font-family: "Manrope", serif;
     font-size: 16px;
     margin-bottom: 15px;
     font-weight: 600;
@@ -980,6 +993,11 @@ p {
 
 .about_us {
     display: block;
+    width: 80%;
+    margin: 0 auto;
+
+
+
     text-align: center;
 }
 
@@ -1006,17 +1024,31 @@ p {
 }
 
 .pulse h1 {
-    font-size: 24px;
+    /* font-size: 24px; */
     color: white;
+}
+
+.STAR{
+    font-size: 24px;
+    font-family: "arial", serif;
 }
 
 .Batyr {
     color: #1e90ff;
+    font-family: "arial", serif;
+    font-size: 36px;
     /* Основной цвет текста */
     text-shadow: 0 0 20px rgba(30, 144, 255, 1), 0 0 20px rgba(30, 144, 255, 1), 0 0 30px rgba(30, 144, 255, 0.4);
 }
 
+.MMA{
+    font-size: 24px;
+    /* font-family: "arial", serif; */
+}
+
 .START {
+    font-size: 24px;
+    /* font-family: "arial", serif; */
     color: #1e90ff;
     /* Основной цвет текста */
     text-shadow: 0 0 20px rgba(30, 144, 255, 1), 0 0 20px rgba(30, 144, 255, 1), 0 0 30px rgba(30, 144, 255, 0.4);
@@ -1263,7 +1295,9 @@ h1 {
 }
 
 .form-section {
+    width: 70%;
     margin-bottom: 20px;
+    margin: 0 auto;
 }
 
 .form-group {
@@ -1280,6 +1314,9 @@ input[type="email"] {
     width: 100%;
     padding: 8px;
     box-sizing: border-box;
+    border: none;
+    border-bottom: 1px solid;
+    opacity: 0.7;
 }
 
 .order-summary {
@@ -1287,4 +1324,20 @@ input[type="email"] {
     padding: 20px;
     background-color: #ffffff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.form-section input{
+    /* width: ; */
+}
+
+.second {
+    display: flex;
+    gap: 10px;
+    justify-content: space-between;
+}
+
+.first {
+    display: flex;
+    gap: 10px;
+    justify-content: space-between;
 }
